--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,14 +1,3 @@
-/**
-* Template Name: NiceAdmin
-* Updated: Nov 17 2023 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 :root {
   scroll-behavior: smooth;
 }
@@ -283,7 +272,7 @@ h6 {
 .category-box .category-name {
   padding: 10px;
   text-align: center;
-  font-size: 16px;
+  font-size: 13px;
   font-weight: bold;
   color: #333;
 }
@@ -966,6 +955,21 @@ h6 {
 
 .dashboard .recent-sales .dataTable-bottom {
   padding: 10px 0 0 0;
+}
+
+/* Button add - Update - Delete */
+.btn-md {
+  background-color: #5788e2;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.9rem;
+  line-height: 1.5;
+  border-radius: 0.6rem;
+  border-color: #5788e2;
+}
+
+.ml-auto {
+  display: grid;
+  justify-content: right;
 }
 
 /* Top Selling */
