added new folder for data customer

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
                 <div class="category-box" >
                   <a href="/products">
                   <img src="/assets/img/apple.jpg" alt="PC" >
-                  <div class="category-name">PC</div>
+                  <div class="category-name">PC & Accessories</div>
                   </a>
                 </div>
 
@@ -37,16 +37,16 @@
                 <div class="category-box">
                   <a href="/products">
                   <img src="/assets/img/handphone.jpg" alt="Mobile Phone">
-                  <div class="category-name">Mobile Phone</div>
+                  <div class="category-name">Mobile Phone & Accessories</div>
                 </a>
                 </div>
 
                 <!-- Kategori Box 3 -->
                 <div class="category-box">
-                  <a href="/products"></a>
+                  <a href="/products">
                   <img src="/assets/img/shoes.jpg" alt="running shoes">
                   <div class="category-name">Sports</div>
-                </a>
+                  </a>
                 </div>
 
 
