--- a/views/error404.ejs
+++ b/views/error404.ejs
@@ -1,10 +1,16 @@
 <main>
   <div class="container">
-    <section class="section error-404 min-vh-100 d-flex flex-column align-items-center justify-content-center">
+    <section
+      class="section error-404 min-vh-100 d-flex flex-column align-items-center justify-content-center"
+    >
       <h1>404</h1>
       <h2>The page you are looking for doesn't exist.</h2>
       <a class="btn" href="/">Back to home</a>
-      <img src="assets/img/not-found.svg" class="img-fluid py-5" alt="Page Not Found">
+      <img
+        src="assets/img/not-found.svg"
+        class="img-fluid py-5"
+        alt="Page Not Found"
+      />
     </section>
   </div>
 </main>
