--- a/views/layout/sidebar.ejs
+++ b/views/layout/sidebar.ejs
@@ -16,13 +16,13 @@
       </a>
       <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
         <li>
-          <a href="/products">
-            <i class="bi bi-circle"></i><span>PC</span>
+          <a href="/categories">
+            <i class="bi bi-circle"></i><span>Category</span>
           </a>
         </li>
         <li>
-          <a href="/products">
-            <i class="bi bi-circle"></i><span>Mobile Phone</span>
+          <a href="/items">
+            <i class="bi bi-circle"></i><span>Items</span>
           </a>
         </li>
         <li>
@@ -34,7 +34,27 @@
     </li>
     <!-- End Icons Nav -->
 
-    <!-- <li class="nav-item">
+    <li class="nav-item">
+      <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
+        <i class="bi bi-layout-text-window-reverse"></i><span>Transaction</span><i class="bi bi-chevron-down ms-auto"></i>
+      </a>
+      <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <li>
+          <a href="/cart">
+            <i class="bi bi-circle"></i><span>Cart</span>
+          </a>
+        </li>
+        <li>
+          <a href="tables-data.html">
+            <i class="bi bi-circle"></i><span>Data Tables</span>
+          </a>
+        </li>
+      </ul>
+    </li>
+    <!-- End Tables Nav -->
+
+
+    <li class="nav-item">
       <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
         <i class="bi bi-journal-text"></i><span>Forms</span><i class="bi bi-chevron-down ms-auto"></i>
       </a>
@@ -47,7 +67,7 @@
         <li>
           <a href="forms-layouts.html">
             <i class="bi bi-circle"></i><span>Form Layouts</span>
-          </a>
+          </a>`
         </li>
         <li>
           <a href="forms-editors.html">
@@ -60,26 +80,11 @@
           </a>
         </li>
       </ul>
-    </li>End Forms Nav
+    </li>
+    <!-- End Forms Nav  -->
 
     
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-        <i class="bi bi-layout-text-window-reverse"></i><span>Tables</span><i class="bi bi-chevron-down ms-auto"></i>
-      </a>
-      <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-        <li>
-          <a href="tables-general.html">
-            <i class="bi bi-circle"></i><span>General Tables</span>
-          </a>
-        </li>
-        <li>
-          <a href="tables-data.html">
-            <i class="bi bi-circle"></i><span>Data Tables</span>
-          </a>
-        </li>
-      </ul>
-    </li>End Tables Nav -->
+    
 
     
 
@@ -88,13 +93,12 @@
 
 
     <li class="nav-heading">Settings</li>
-
     <li class="nav-item">
       <a class="nav-link collapsed" href="users-profile.html">
         <i class="bi bi-person"></i>
         <span>Profile</span>
       </a>
-    </li><!-- End Profile Page Nav -->
+    </li><!-- End Profile Page Nav
 
     <li class="nav-item">
       <a class="nav-link collapsed" href="pages-contact.html">
@@ -117,19 +121,21 @@
       </a>
     </li><!-- End Login Page Nav -->
 
-    <!-- <li class="nav-item">
-      <a class="nav-link collapsed" href="/error404">
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="/error">
         <i class="bi bi-dash-circle"></i>
         <span>Error 404</span>
       </a>
-    </li>End Error 404 Page Nav
+    </li>
+    <!-- End Error 404 Page Nav -->
 
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="pages-blank.html">
         <i class="bi bi-file-earmark"></i>
-        <span>Blank</span>
+        <span>Transaction</span>
       </a>
-    </li>End Blank Page Nav -->
+    </li> -->
+    <!-- End Blank Page Nav -->
 
     <li class="nav-item">
       <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
@@ -142,8 +148,8 @@
           </a>
         </li>
         <li>
-          <a href="/data-user">
-            <i class="bi bi-circle"></i><span>Data User</span>
+          <a href="/data-customer">
+            <i class="bi bi-circle"></i><span>Data Customers</span>
           </a>
         </li>
       </ul>
