--- a/views/products.ejs
+++ b/views/products.ejs
@@ -17,9 +17,9 @@
                 </th>
                 <th>Category</th>
                 <th>Stock</th>
-                <!-- <th>City</th>
+                <th>City</th>
                 <th data-type="date" data-format="YYYY/DD/MM">Start Date</th>
-                <th>Completion</th> -->
+                <th>Completion</th>
               </tr>
             </thead>
             <tbody>
@@ -28,63 +28,63 @@
                 <td>ASUS VIVOBOOK GO 14</td>
                 <td>PC</td>
                 <td>9958</td>
-                <!-- <td>Curicó</td>
+                <td>Curicó</td>
                 <td>2005/02/11</td>
-                <td>37%</td> -->
+                <td>37%</td>
               </tr>
               <tr>
                 <td>A002</td>
                 <td>HP 245 G10</td>
                 <td>PC</td>
                 <td>8971</td>
-                <!-- <td>Dhanbad</td>
+                <td>Dhanbad</td>
                 <td>1999/04/07</td>
-                <td>97%</td> -->
+                <td>97%</td>
               </tr>
               <tr>
                 <td>A003</td>
                 <td>LENOVO IDEAPAD SLIM 14</td>
                 <td>PC</td>
                 <td>3147</td>
-                <!-- <td>Norman</td>
+                <td>Norman</td>
                 <td>2005/09/08</td>
-                <td>63%</td> -->
+                <td>63%</td>
               </tr>
               <tr>
                 <td>B001</td>
                 <td>APPLE IPHONE 15 PRO MAX </td>
                 <td>Mobile Phone</td>
                 <td>3497</td>
-                <!-- <td>Amqui</td>
+                <td>Amqui</td>
                 <td>2009/29/11</td>
-                <td>30%</td> -->
+                <td>30%</td>
               </tr>
               <tr>
                 <td>B002</td>
                 <td>APPLE IPHONE 13</td>
                 <td>Mobile Phone</td>
                 <td>5018</td>
-                <!-- <td>Kempten</td>
+                <td>Kempten</td>
                 <td>2006/11/09</td>
-                <td>17%</td> -->
+                <td>17%</td>
               </tr>
               <tr>
                 <td>C001</td>
                 <td>Skechers Harren Men's sneakers</td>
                 <td>Sports</td>
                 <td>3925</td>
-                <!-- <td>Enines</td>
+                <td>Enines</td>
                 <td>2006/03/08</td>
-                <td>57%</td> -->
+                <td>57%</td>
               </tr>
               <tr>
                 <td>C002</td>
                 <td>Reebok Energen Lite Men Running Shoes</td>
                 <td>Sports</td>
                 <td>3925</td>
-                <!-- <td>Enines</td>
+                <td>Enines</td>
                 <td>2006/03/08</td>
-                <td>57%</td> -->
+                <td>57%</td>
               </tr>
             </tbody>
           </table>
