added folder inventory and products ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
               <div class="category-boxes">
                 <!-- Kategori Box 1 -->
                 <div class="category-box" >
-                  <a href="/products">
+                  <a href="/products/PC">
                   <img src="/assets/img/apple.jpg" alt="PC" >
                   <div class="category-name">PC & Accessories</div>
                   </a>
@@ -35,7 +35,7 @@
 
                 <!-- Kategori Box 2 -->
                 <div class="category-box">
-                  <a href="/products">
+                  <a href="/products/mobile-phone">
                   <img src="/assets/img/handphone.jpg" alt="Mobile Phone">
                   <div class="category-name">Mobile Phone & Accessories</div>
                 </a>
@@ -43,7 +43,7 @@
 
                 <!-- Kategori Box 3 -->
                 <div class="category-box">
-                  <a href="/products">
+                  <a href="/products/sports">
                   <img src="/assets/img/shoes.jpg" alt="running shoes">
                   <div class="category-name">Sports</div>
                   </a>
@@ -57,11 +57,6 @@
       </div><!-- End Top Selling -->
   </div>
 
-    </div><!-- End Customers Card -->
+  </div><!-- End Customers Card -->
   </section>
-
-  <!-- <div class="container-fluid text-center">
-        <p class="h5"> 
-          "Pilih dengan cepat, nikmati dengan sempurna. <strong>VirtuVorgue</strong>, menghadirkan kemudahan dalam setiap klik."</p>
-      </div> -->
   </main><!-- End #main -->
