--- a/views/layout/sidebar.ejs
+++ b/views/layout/sidebar.ejs
@@ -1,48 +1,31 @@
 <!-- ======= Sidebar ======= -->
 <aside id="sidebar" class="sidebar">
-
   <ul class="sidebar-nav" id="sidebar-nav">
-
     <li class="nav-item">
-      <a class="nav-link " href="/">
+      <a class="nav-link" href="/">
         <i class="bi bi-grid"></i>
         <span>Dashboard</span>
       </a>
-    </li><!-- End Dashboard Nav -->
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
-        <i class="bi bi-gem"></i><span>Products</span><i class="bi bi-chevron-down ms-auto"></i>
-      </a>
-      <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-        <li>
-          <a href="/categories">
-            <i class="bi bi-circle"></i><span>Category</span>
-          </a>
-        </li>
-        <li>
-          <a href="/items">
-            <i class="bi bi-circle"></i><span>Items</span>
-          </a>
-        </li>
-        <li>
-          <a href="/products">
-            <i class="bi bi-circle"></i><span>Sports</span>
-          </a>
-        </li>
-      </ul>
     </li>
-    <!-- End Icons Nav -->
+    <!-- End Dashboard Nav -->
 
     <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-        <i class="bi bi-layout-text-window-reverse"></i><span>Transaction</span><i class="bi bi-chevron-down ms-auto"></i>
+      <a
+        class="nav-link collapsed"
+        data-bs-target="#tables-nav"
+        data-bs-toggle="collapse"
+        href="#"
+      >
+        <i class="bi bi-layout-text-window-reverse"></i><span>Transaction</span
+        ><i class="bi bi-chevron-down ms-auto"></i>
       </a>
-      <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+      <ul
+        id="tables-nav"
+        class="nav-content collapse"
+        data-bs-parent="#sidebar-nav"
+      >
         <li>
-          <a href="/cart">
-            <i class="bi bi-circle"></i><span>Cart</span>
-          </a>
+          <a href="/cart"> <i class="bi bi-circle"></i><span>Cart</span> </a>
         </li>
         <li>
           <a href="tables-data.html">
@@ -53,12 +36,21 @@
     </li>
     <!-- End Tables Nav -->
 
-
-    <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-        <i class="bi bi-journal-text"></i><span>Forms</span><i class="bi bi-chevron-down ms-auto"></i>
+    <!-- <li class="nav-item">
+      <a
+        class="nav-link collapsed"
+        data-bs-target="#forms-nav"
+        data-bs-toggle="collapse"
+        href="#"
+      >
+        <i class="bi bi-journal-text"></i><span>Forms</span
+        ><i class="bi bi-chevron-down ms-auto"></i>
       </a>
-      <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+      <ul
+        id="forms-nav"
+        class="nav-content collapse"
+        data-bs-parent="#sidebar-nav"
+      >
         <li>
           <a href="forms-elements.html">
             <i class="bi bi-circle"></i><span>Form Elements</span>
@@ -66,8 +58,8 @@
         </li>
         <li>
           <a href="forms-layouts.html">
-            <i class="bi bi-circle"></i><span>Form Layouts</span>
-          </a>`
+            <i class="bi bi-circle"></i><span>Form Layouts</span> </a
+          >`
         </li>
         <li>
           <a href="forms-editors.html">
@@ -80,46 +72,107 @@
           </a>
         </li>
       </ul>
-    </li>
+    </li> -->
     <!-- End Forms Nav  -->
 
-    
-    
+    <!-- <li class="nav-item">
+      <a
+        class="nav-link collapsed"
+        data-bs-target="#charts-nav"
+        data-bs-toggle="collapse"
+        href="#"
+      >
+        <i class="bi bi-bar-chart"></i><span>Charts</span
+        ><i class="bi bi-chevron-down ms-auto"></i>
+      </a>
+      <ul
+        id="charts-nav"
+        class="nav-content collapse"
+        data-bs-parent="#sidebar-nav"
+      >
+        <li>
+          <a href="charts-chartjs.html">
+            <i class="bi bi-circle"></i><span>Chart.js</span>
+          </a>
+        </li>
+        <li>
+          <a href="charts-apexcharts.html">
+            <i class="bi bi-circle"></i><span>ApexCharts</span>
+          </a>
+        </li>
+        <li>
+          <a href="charts-echarts.html">
+            <i class="bi bi-circle"></i><span>ECharts</span>
+          </a>
+        </li>
+      </ul>
+    </li> -->
+    <!-- End Charts Nav -->
 
-    
-
-
-    
-
+    <li class="nav-item">
+      <a
+        class="nav-link collapsed"
+        data-bs-target="#icons-nav"
+        data-bs-toggle="collapse"
+        href="#"
+      >
+        <i class="bi bi-gem"></i><span>Inventory</span
+        ><i class="bi bi-chevron-down ms-auto"></i>
+      </a>
+      <ul
+        id="icons-nav"
+        class="nav-content collapse"
+        data-bs-parent="#sidebar-nav"
+      >
+        <li>
+          <a href="/categories">
+            <i class="bi bi-circle"></i><span>Products Table</span>
+          </a>
+        </li>
+        <li>
+          <a href="/items"> <i class="bi bi-circle"></i><span>Items</span> </a>
+        </li>
+        <!-- <li>
+          <a href="/products">
+            <i class="bi bi-circle"></i><span>Sports</span>
+          </a>
+        </li> -->
+      </ul>
+    </li>
+    <!-- End Icons Nav -->
 
     <li class="nav-heading">Settings</li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="users-profile.html">
         <i class="bi bi-person"></i>
         <span>Profile</span>
       </a>
-    </li><!-- End Profile Page Nav
+    </li> -->
+    <!--  End Profile Page Nav  -->
 
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="pages-contact.html">
         <i class="bi bi-envelope"></i>
         <span>Contact</span>
       </a>
-    </li><!-- End Contact Page Nav -->
+    </li> -->
+    <!-- End Contact Page Nav -->
 
     <li class="nav-item">
       <a class="nav-link collapsed" href="/register">
         <i class="bi bi-card-list"></i>
         <span>Register</span>
       </a>
-    </li><!-- End Register Page Nav -->
+    </li>
+    <!-- End Register Page Nav -->
 
     <li class="nav-item">
       <a class="nav-link collapsed" href="/login">
         <i class="bi bi-box-arrow-in-right"></i>
         <span>Login</span>
       </a>
-    </li><!-- End Login Page Nav -->
+    </li>
+    <!-- End Login Page Nav -->
 
     <li class="nav-item">
       <a class="nav-link collapsed" href="/error">
@@ -138,10 +191,20 @@
     <!-- End Blank Page Nav -->
 
     <li class="nav-item">
-      <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-        <i class="bi bi-menu-button-wide"></i><span>Users/Employees</span><i class="bi bi-chevron-down ms-auto"></i>
+      <a
+        class="nav-link collapsed"
+        data-bs-target="#components-nav"
+        data-bs-toggle="collapse"
+        href="#"
+      >
+        <i class="bi bi-menu-button-wide"></i><span>Users/Employees</span
+        ><i class="bi bi-chevron-down ms-auto"></i>
       </a>
-      <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+      <ul
+        id="components-nav"
+        class="nav-content collapse"
+        data-bs-parent="#sidebar-nav"
+      >
         <li>
           <a href="/data-admin">
             <i class="bi bi-circle"></i><span>Data Admin</span>
@@ -153,8 +216,8 @@
           </a>
         </li>
       </ul>
-    </li><!-- End Components Nav -->
-
+    </li>
+    <!-- End Components Nav -->
   </ul>
-
-</aside><!-- End Sidebar-->
+</aside>
+<!-- End Sidebar-->
