--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,10 +1,287 @@
-<section class="section">
-  <div class="row">
-    <div class="col-lg-30">
-      <div class="card">
-        <div class="card-body">
-        </div>    
-      </div>    
-    </div>  
-  </div>
-</section>
+<main id="main" class="main">
+  <section class="section dashboard">
+    <div class="row">
+      <!-- Left side columns -->
+      <div class="col-lg-8">
+        <div class="row">
+          <!-- Sales Card -->
+          <div class="col-xxl-4 col-md-6">
+            <div class="card info-card sales-card">
+              <div class="card-body">
+                <h5 class="card-title">Product Ordered</h5>
+
+                <div class="d-flex align-items-center">
+                  <div
+                    class="card-icon rounded-circle d-flex align-items-center justify-content-center"
+                  >
+                    <i class="bi bi-cart"></i>
+                  </div>
+                  <div class="ps-3">
+                    <h6>145</h6>
+                    <span class="text-success small pt-1 fw-bold">12%</span>
+                    <span class="text-muted small pt-2 ps-1">increase</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Revenue Card -->
+          <div class="col-xxl-4 col-md-6">
+            <div class="card info-card revenue-card">
+              <div class="filter">
+                <a class="icon" href="#" data-bs-toggle="dropdown"
+                  ><i class="bi bi-three-dots"></i
+                ></a>
+                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                  <li class="dropdown-header text-start">
+                    <h6>Filter</h6>
+                  </li>
+
+                  <li><a class="dropdown-item" href="#">Today</a></li>
+                  <li><a class="dropdown-item" href="#">This Month</a></li>
+                  <li><a class="dropdown-item" href="#">This Year</a></li>
+                </ul>
+              </div>
+
+              <div class="card-body">
+                <h5 class="card-title">Product Subtotals</h5>
+
+                <div class="d-flex align-items-center">
+                  <div
+                    class="card-icon rounded-circle d-flex align-items-center justify-content-center"
+                  >
+                    <i class="bi bi-currency-dollar"></i>
+                  </div>
+                  <div class="ps-3">
+                    <h6>$3,264</h6>
+                    <span class="text-success small pt-1 fw-bold">8%</span>
+                    <span class="text-muted small pt-2 ps-1">increase</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End Revenue Card -->
+
+          <!-- Customers Card -->
+          <!-- <div class="col-xxl-4 col-xl-12">
+
+                      <div class="card info-card customers-card">
+                        <div class="card-body">
+                          <h5 class="card-title">Your Ordered</h5>
+                          
+                          <div class="d-flex align-items-center">
+                            
+                            <div class="ps-3">
+                              <h6>For Image</h6>
+                              
+                            </div>
+                          </div>
+
+                          </div>
+                        </div>
+                    </div> -->
+
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Your Ordered</h5>
+
+              <!-- Table with hoverable rows -->
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">No</th>
+                    <th scope="col">Product Name</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Age</th>
+                    <th scope="col">Start Date</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Brandon Jacob</td>
+                    <td>Designer</td>
+                    <td>28</td>
+                    <td>2016-05-25</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Bridie Kessler</td>
+                    <td>Developer</td>
+                    <td>35</td>
+                    <td>2014-12-05</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Ashleigh Langosh</td>
+                    <td>Finance</td>
+                    <td>45</td>
+                    <td>2011-08-12</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td>Angus Grady</td>
+                    <td>HR</td>
+                    <td>34</td>
+                    <td>2012-06-11</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5</th>
+                    <td>Raheem Lehner</td>
+                    <td>Dynamic Division Officer</td>
+                    <td>47</td>
+                    <td>2011-04-19</td>
+                  </tr>
+                </tbody>
+              </table>
+              <div
+                style="
+                  display: flex;
+                  width: 100%;
+                  border: radius 50px;
+                  justify-content: end;
+                  margin-bottom: 12px;
+                "
+              >
+                <a href="/items/add" class="btn btn-outline-primary">Buy</a>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-xxl-4 col-xl-12">
+                      <div class="card info-card customers-card">
+                        <div class="card-body">
+                          <h5 class="card-title">Ringkasan Belanja <span>| This Year</span></h5>
+                          
+                          <div class="d-flex align-items-center">
+                            <div class="ps-3">
+                              <h6 style="font-size: 25px;">Total price </h6>
+                              <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
+                            </div>
+                          </div>
+
+                          </div>
+                        </div>
+                    </div> -->
+
+          <!-- Top Selling -->
+          <div class="col-12">
+            <div class="card top-selling overflow-auto">
+              <div class="filter">
+                <a class="icon" href="#" data-bs-toggle="dropdown"
+                  ><i class="bi bi-three-dots"></i
+                ></a>
+                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                  <li class="dropdown-header text-start">
+                    <h6>Filter</h6>
+                  </li>
+
+                  <li><a class="dropdown-item" href="#">Today</a></li>
+                  <li><a class="dropdown-item" href="#">This Month</a></li>
+                  <li><a class="dropdown-item" href="#">This Year</a></li>
+                </ul>
+              </div>
+
+              <div class="card-body pb-0">
+                <h5 class="card-title">Top Selling <span>| Today</span></h5>
+
+                <table class="table table-borderless">
+                  <thead>
+                    <tr>
+                      <th scope="col">Preview</th>
+                      <th scope="col">Product</th>
+                      <th scope="col">Price</th>
+                      <th scope="col">Sold</th>
+                      <th scope="col">Revenue</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">
+                        <a href="#"
+                          ><img src="assets/img/product-1.jpg" alt=""
+                        /></a>
+                      </th>
+                      <td>
+                        <a href="#" class="text-primary fw-bold"
+                          >Ut inventore ipsa voluptas nulla</a
+                        >
+                      </td>
+                      <td>$64</td>
+                      <td class="fw-bold">124</td>
+                      <td>$5,828</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">
+                        <a href="#"
+                          ><img src="assets/img/product-2.jpg" alt=""
+                        /></a>
+                      </th>
+                      <td>
+                        <a href="#" class="text-primary fw-bold"
+                          >Exercitationem similique doloremque</a
+                        >
+                      </td>
+                      <td>$46</td>
+                      <td class="fw-bold">98</td>
+                      <td>$4,508</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">
+                        <a href="#"
+                          ><img src="assets/img/product-3.jpg" alt=""
+                        /></a>
+                      </th>
+                      <td>
+                        <a href="#" class="text-primary fw-bold"
+                          >Doloribus nisi exercitationem</a
+                        >
+                      </td>
+                      <td>$59</td>
+                      <td class="fw-bold">74</td>
+                      <td>$4,366</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">
+                        <a href="#"
+                          ><img src="assets/img/product-4.jpg" alt=""
+                        /></a>
+                      </th>
+                      <td>
+                        <a href="#" class="text-primary fw-bold"
+                          >Officiis quaerat sint rerum error</a
+                        >
+                      </td>
+                      <td>$32</td>
+                      <td class="fw-bold">63</td>
+                      <td>$2,016</td>
+                    </tr>
+                    <tr>
+                      <th scope="row">
+                        <a href="#"
+                          ><img src="assets/img/product-5.jpg" alt=""
+                        /></a>
+                      </th>
+                      <td>
+                        <a href="#" class="text-primary fw-bold"
+                          >Sit unde debitis delectus repellendus</a
+                        >
+                      </td>
+                      <td>$79</td>
+                      <td class="fw-bold">41</td>
+                      <td>$3,239</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+          <!-- End Top Selling -->
+        </div>
+      </div>
+    </div>
+    <!-- End Top Selling -->
+  </section>
+</main>
+<!-- End #main -->
