--- a/views/inventory/detail-items.ejs
+++ b/views/inventory/detail-items.ejs
@@ -25,7 +25,7 @@
                   <td><%= products.product_name %></td>
                   <td><%= products.description %></td>
                   <td><%= products.stock_quantity %></td>
-                  <td><%= products.price %></td>
+                  <td>Rp. <%= products.price %></td>
                 </tr>
                 <% } else { %>
                 <!-- Handle case when customer is not defined -->
