--- a/views/layout/login-page-admin.ejs
+++ b/views/layout/login-page-admin.ejs
@@ -55,7 +55,7 @@
                 <div class="d-flex justify-content-center py-4">
                   <a href="/" class="logo d-flex align-items-center w-auto">
                     <img src="/assets/img/logo.png" alt="Logo VirtuVorgue" />
-                    <span class="d-none d-lg-block">VirtuVorgue</span>
+                    <span class="d-none d-lg-block">Super Admin Area</span>
                   </a>
                 </div>
                 <!-- End Logo -->
@@ -134,8 +134,7 @@
                       </div>
                       <div class="col-12">
                         <p class="small mb-0">
-                          Don't have account?
-                          <a href="/register">Create an account</a>
+                          <a href="/register">Back to previous page?</a>
                         </p>
                       </div>
                     </form>
