--- a/views/layout/register-admin-page.ejs
+++ b/views/layout/register-admin-page.ejs
@@ -54,8 +54,8 @@
               >
                 <div class="d-flex justify-content-center py-4">
                   <a href="/" class="logo d-flex align-items-center w-auto">
-                    <img src="/assets/img/logo.png" alt="Logo VirtuVorgue" />
-                    <span class="d-none d-lg-block">VirtuVorgue</span>
+                    <img src="/assets/img/logo.png" alt="" />
+                    <span class="d-none d-lg-block">Admin Area</span>
                   </a>
                 </div>
                 <!-- End Logo -->
@@ -64,20 +64,55 @@
                   <div class="card-body">
                     <div class="pt-4 pb-2">
                       <h5 class="card-title text-center pb-0 fs-4">
-                        Login to Your Account
+                        Create an Account Admin
                       </h5>
                       <p class="text-center small">
-                        Enter your username & password to login
+                        Enter your personal details to create account
                       </p>
                     </div>
 
+                    <div class="col-12 mt-3">
+                      <% if (typeof errors !== 'undefined' && errors.length > 0)
+                      { %>
+                      <div class="alert alert-danger" role="alert">
+                        <ul>
+                          <% errors.forEach(error => { %>
+                          <li><%= error.msg %></li>
+                          <% }) %>
+                        </ul>
+                      </div>
+                      <% } %> <% if (typeof successMessage !== 'undefined' &&
+                      successMessage !== null) { %>
+                      <div class="alert alert-success" role="alert">
+                        <%= successMessage %>
+                      </div>
+                      <% } %>
+                    </div>
+
                     <form
-                      class="row g-3 needs-validation"
                       method="post"
+                      action="/register/admin"
+                      class="row g-3 needs-validation"
                       novalidate
                     >
                       <div class="col-12">
-                        <label for="yourUsername" class="form-label"
+                        <label for="yourName" class="form-label"
+                          >Your Name</label
+                        >
+                        <input
+                          type="text"
+                          name="nama"
+                          class="form-control"
+                          id="nama"
+                          required
+                        />
+                        <div class="invalid-feedback">
+                          Please, enter your name!
+                        </div>
+                      </div>
+
+                      <div class="col-12">
+                        <label for="username" class="form-label"
                           >Username</label
                         >
                         <div class="input-group has-validation">
@@ -88,12 +123,44 @@
                             type="text"
                             name="username"
                             class="form-control"
-                            id="yourUsername"
+                            id="username"
                             required
                           />
                           <div class="invalid-feedback">
-                            Please enter your username.
+                            Please choose a username.
                           </div>
+                        </div>
+                      </div>
+
+                      <div class="col-12">
+                        <label for="yourEmail" class="form-label"
+                          >Your Email</label
+                        >
+                        <input
+                          type="email"
+                          name="email"
+                          class="form-control"
+                          id="yourEmail"
+                          required
+                        />
+                        <div class="invalid-feedback">
+                          Please enter a valid Email adddress!
+                        </div>
+                      </div>
+
+                      <div class="col-12">
+                        <label for="mobilePhone" class="form-label"
+                          >Mobile Phone</label
+                        >
+                        <input
+                          type="text"
+                          name="mobile_phone"
+                          class="form-control"
+                          id="mobile_phone"
+                          required
+                        />
+                        <div class="invalid-feedback">
+                          Please enter a valid Mobile Phone!
                         </div>
                       </div>
 
@@ -117,25 +184,36 @@
                         <div class="form-check">
                           <input
                             class="form-check-input"
+                            name="terms"
                             type="checkbox"
-                            name="remember"
-                            value="true"
-                            id="rememberMe"
+                            value=""
+                            id="acceptTerms"
+                            required
                           />
-                          <label class="form-check-label" for="rememberMe"
-                            >Remember me</label
+                          <label class="form-check-label" for="acceptTerms"
+                            >I agree and accept the
+                            <a href="#">terms and conditions</a></label
                           >
+                          <div class="invalid-feedback">
+                            You must agree before submitting.
+                          </div>
                         </div>
                       </div> -->
+                      <br />
                       <div class="col-12">
                         <button class="btn btn-primary w-100" type="submit">
-                          Login
+                          Create Account
                         </button>
                       </div>
                       <div class="col-12">
                         <p class="small mb-0">
-                          Don't have account?
-                          <a href="/register">Create an account</a>
+                          Already have an account?
+                          <a href="/login/admin">Log in</a>
+                        </p>
+                        <p class="small mb-0">
+                          <a href="/login">
+                            << Back to the previous main page?
+                          </a>
                         </p>
                       </div>
                     </form>
