--- a/views/customers/data-customer.ejs
+++ b/views/customers/data-customer.ejs
@@ -17,12 +17,21 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Data Customers</h5>
-            <a
-              href="/data-customer/add"
-              class="btn btn-primary btn-md position-relative"
+            <div
+              style="
+                display: flex;
+                width: 100%;
+                justify-content: end;
+                margin-bottom: 12px;
+              "
             >
-              Add
-            </a>
+              <a
+                href="/data-customer/add"
+                class="btn btn-primary btn-md position-relative"
+              >
+                Add
+              </a>
+            </div>
             <table class="table table-hover datatable">
               <thead>
                 <tr>
