--- a/views/inventory/add-items.ejs
+++ b/views/inventory/add-items.ejs
@@ -16,19 +16,7 @@
 
             <form action="/items/add" method="post" class="row g-3">
               <div class="col-12">
-                <label for="id" class="form-label">Product Id</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="product_id"
-                  name="product_id"
-                  required
-                />
-              </div>
-              <div class="col-12">
-                <label for="product_name" class="form-label"
-                  >Product Name</label
-                >
+                <label for="username" class="form-label">Product Name</label>
                 <input
                   type="text"
                   class="form-control"
@@ -37,6 +25,7 @@
                   required
                 />
               </div>
+
               <div class="col-12">
                 <label for="description" class="form-label">Description</label>
                 <input
@@ -68,9 +57,29 @@
                 />
               </div>
               <!-- <div class="col-12">
-                      <label for="inputAddress" class="form-label">Address</label>
-                      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
-                    </div> -->
+                <label for="image" class="form-label">Product Image</label>
+                <input
+                  type="file"
+                  class="form-control"
+                  id="image"
+                  name="image"
+                  placeholder="File"
+                  accept="image/*"
+                  required
+                />
+              </div> -->
+
+              <div class="col-12">
+                <label for="category" class="form-label">Category</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="category"
+                  name="category"
+                  required
+                />
+              </div>
+
               <div class="text-center">
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="reset" class="btn btn-secondary">Reset</button>
