--- a/views/products/add-product-pc.ejs
+++ b/views/products/add-product-pc.ejs
@@ -4,7 +4,7 @@
       <div class="col-lg-8">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Form Add Customer</h5>
+            <h5 class="card-title">Form Add Items</h5>
 
             <% if(typeof errors != "undefined") { %>
             <div class="alert alert-primary" role="alert">
@@ -14,57 +14,81 @@
             </div>
             <% } %>
 
-            <form action="/data-customer/add" method="post" class="row g-3">
+            <form
+              action="/products/PC/add"
+              method="post"
+              class="row g-3"
+              enctype="multipart/form-data"
+            >
               <div class="col-12">
-                <label for="username" class="form-label">Username</label>
+                <label for="username" class="form-label">Product Name</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="username"
-                  name="username"
+                  id="product_name"
+                  name="product_name"
+                  required
+                />
+              </div>
+
+              <div class="col-12">
+                <label for="description" class="form-label">Description</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="description"
+                  name="description"
                   required
                 />
               </div>
               <div class="col-12">
-                <label for="name" class="form-label">Name</label>
+                <label for="price" class="form-label">Price</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="name"
-                  name="nama"
+                  id="price"
+                  name="price"
                   required
                 />
               </div>
               <div class="col-12">
-                <label for="email" class="form-label">Email</label>
+                <label for="stock" class="form-label">Stock</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="email"
-                  name="email"
-                  required
-                />
-              </div>
-              <div class="col-12">
-                <label for="mobile_phone" class="form-label"
-                  >Mobile Phone</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="mobile_phone"
-                  name="mobile_phone"
+                  id="stock_quantity"
+                  name="stock_quantity"
                   required
                 />
               </div>
               <!-- <div class="col-12">
-                      <label for="inputAddress" class="form-label">Address</label>
-                      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
-                    </div> -->
+                <label for="image" class="form-label">Product Image</label>
+                <input
+                  type="file"
+                  class="form-control"
+                  id="image"
+                  name="image"
+                  placeholder="File"
+                  accept="image/*"
+                  required
+                />
+              </div> -->
+
+              <div class="col-12">
+                <label for="category" class="form-label">Category</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="category"
+                  name="category"
+                  required
+                />
+              </div>
+
               <div class="text-center">
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <button type="reset" class="btn btn-secondary">Reset</button>
-                <a href="/data-customer" class="btn btn-primary"
+                <a href="/items" class="btn btn-primary"
                   >Back to previous page</a
                 >
               </div>
