--- a/views/products/products-pc.ejs
+++ b/views/products/products-pc.ejs
@@ -11,7 +11,7 @@
     <br>
     
   </div><!-- End Page Title -->
-
+ 
 
   <section class="section dashboard">
     <div class="row">
@@ -23,6 +23,20 @@
         <div class="card info-card customers-card">
           <div class="card-body">
             <h4 class="card-title">Personal Computer & Accessories</h4>
+            <div
+              style="
+                display: flex;
+                width: 100%;
+                justify-content: end;
+                margin-bottom: 12px;
+              "
+            >
+              <a
+                href="/products/PC/add"
+                class="btn btn-primary btn-md position-relative"
+                >Add</a
+              >
+            </div>
             <div class="d-flex align-items-center">
             <div class="category-boxes-products">
               <!-- Kategori Box 1 -->
