--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -284,16 +284,22 @@ h6 {
 /* ==================== CSS PRODUCT ITEMS =================================== */
 .category-boxes-products {
   display: flex;
+  align-items: center;
   margin-top: 20px;
+  gap: 10px;
+  justify-content: start;
 }
 
 .category-box-products {
-  width: 40%;
+  width: 28%;
+  cursor: pointer;
+  margin-top: 30px;
   margin-bottom: 20px;
   margin-left: 20px;
-  margin-right: 10x;
+  font-family: "Poppins";
+  margin-right: 15px;
   overflow: hidden;
-  border-radius: 8px;
+  border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s;
 }
@@ -304,15 +310,32 @@ h6 {
 
 .category-box-products img {
   width: 100%;
+  height: 180px;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 }
 
 .category-box-products .category-name-products {
   padding: 10px;
-  text-align: center;
+  padding-bottom: 5px;
+  text-align: start;
+  font-size: 17px;
+  color: #333;
+}
+
+.category-box-products .category-name-products-description {
+  padding: 10px;
+  text-align: start;
   font-size: 15px;
-  font-weight: bold;
+  color: #333;
+}
+
+.category-box-products .category-name-products-price {
+  padding: 10px;
+  text-align: end;
+  font-family: "Poppins";
+  font-weight: 400 !important;
+  font-size: 16px;
   color: #333;
 }
 
